tests/functional2/lang/path-slash/parse-fail.err.exp
error: path has a trailing slash
       at /pwd/in.nix:6:12:
            5| # and https://nixos.org/nix-dev/2016-June/020829.html
            6| /nix/store/
             |            ^
            7|
